scaling app with ws

--- a/views/partial/navBar.ejs
+++ b/views/partial/navBar.ejs
@@ -64,7 +64,7 @@
                 </a>
               </li>
               <li>
-                <a href="" class="nav-link text-white">
+                <a href="/board" class="nav-link text-white">
                   <img src="/icon/iconGame.png" class="bi d-block mx-auto mb-1" width="34" height="34">
                   ألعاب تعليمية
                 </a>
